# rust-analyzer-17039-repro

./: Cargo.toml  README.md
src/: fnvalue.rs  lib.rs  main.rs
