[package]
name = "cargo-mutants"
version = "24.3.0"
edition = "2021"
authors = ["Martin Pool"]
license = "MIT"
description = "Inject bugs and see if your tests catch them"
repository = "https://github.com/sourcefrog/cargo-mutants"
homepage = "https://mutants.rs/"
categories = ["development-tools::testing"]
keywords = ["testing", "mutants", "cargo", "mutation-testing", "coverage"]
rust-version = "1.74"
exclude = [
    ".codespell*",
    ".markdownlint*",
    "*.md",
    ".devcontainer",
    ".gitattributes",
    ".gitignore",
    ".github",
    "mutants.out*",
    ".vscode",
    "book",
    "testdata",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
camino = "1.0"
cargo_metadata = "0.18"
clap = { version = "4.4", features = [
    "deprecated",
    "derive",
    "env",
    "wrap_help",
] }
clap_complete = "4"
color-print = "0.3"
console = "0.15"
ctrlc = { version = "3.2.1", features = ["termination"] }
fastrand = "2"
fs2 = "0.4"
globset = "0.4.8"
humantime = "2.1.0"
ignore = "0.4.20"
indoc = "2.0.0"
itertools = "0.12"
mutants = "0.0.3"
nextest-metadata = "0.10"
patch = "0.7"
path-slash = "0.2"
quote = "1.0"
regex = "1.10"
serde_json = "1"
similar = "2.0"
strum = { version = "0.26", features = ["derive"] }
subprocess = "0.2.8"
tempfile = "3.2"
time = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
whoami = "1.5"

[dependencies.nutmeg]
version = "0.1.4"
# git = "https://github.com/sourcefrog/nutmeg.git"

[dependencies.proc-macro2]
features = ["span-locations"]
version = "1.0.29"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.syn]
version = "2"
features = ["full", "extra-traits", "visit"]
