[package]
name = "cargo-mutants"
version = "24.3.0"
edition = "2021"
authors = ["Martin Pool"]
license = "MIT"
description = "Inject bugs and see if your tests catch them"
repository = "https://github.com/sourcefrog/cargo-mutants"
homepage = "https://mutants.rs/"
categories = ["development-tools::testing"]
keywords = ["testing", "mutants", "cargo", "mutation-testing", "coverage"]
rust-version = "1.74"
exclude = [
    ".codespell*",
    ".markdownlint*",
    "*.md",
    ".devcontainer",
    ".gitattributes",
    ".gitignore",
    ".github",
    "mutants.out*",
    ".vscode",
    "book",
    "testdata",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
quote = "1.0"

[dependencies.proc-macro2]
features = ["span-locations"]
version = "1.0.29"

[dependencies.syn]
version = "2"
features = ["full", "extra-traits", "visit"]
