[package]
name = "cargo-mutants"
version = "24.3.0"
edition = "2021"
authors = ["Martin Pool"]
license = "MIT"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
quote = "1.0"

[dependencies.proc-macro2]
features = ["span-locations"]
version = "1.0.29"

[dependencies.syn]
version = "2"
features = ["full", "extra-traits", "visit"]
